--- a/BootstrapTest/BootstrapTest.csproj
+++ b/BootstrapTest/BootstrapTest.csproj
@@ -69,8 +69,12 @@
   <ItemGroup>
     <Content Include="css\bootstrap.css" />
     <Content Include="css\style.css" />
+    <Content Include="DisplayFlex.html" />
     <Content Include="DivOrdering.html" />
     <Content Include="First.html" />
+    <Content Include="HorizontalAlignment.html" />
+    <Content Include="Note.txt" />
+    <Content Include="Position.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
