--- a/BootstrapTest/BootstrapTest.csproj
+++ b/BootstrapTest/BootstrapTest.csproj
@@ -88,6 +88,7 @@
     <Content Include="DisplayFlex.html" />
     <Content Include="DivOrdering.html" />
     <Content Include="First.html" />
+    <Content Include="FormControl.html" />
     <Content Include="HorizontalAlignment.html" />
     <Content Include="Images\banner.jpg" />
     <Content Include="js\bootstrap.bundle.js" />
@@ -96,6 +97,7 @@
     <Content Include="js\bootstrap.esm.min.js" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
+    <Content Include="ListGroup.html" />
     <Content Include="Note.txt" />
     <Content Include="Position.html" />
     <Content Include="Text-Formatting.html" />
