--- a/BootstrapTest/BootstrapTest.csproj
+++ b/BootstrapTest/BootstrapTest.csproj
@@ -91,6 +91,7 @@
     <Content Include="FormControl.html" />
     <Content Include="HorizontalAlignment.html" />
     <Content Include="Images\banner.jpg" />
+    <Content Include="InlineForm.html" />
     <Content Include="js\bootstrap.bundle.js" />
     <Content Include="js\bootstrap.bundle.min.js" />
     <Content Include="js\bootstrap.esm.js" />
