--- a/BootstrapTest/BootstrapTest.csproj
+++ b/BootstrapTest/BootstrapTest.csproj
@@ -67,6 +67,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BreadCrumb.html" />
+    <Content Include="CardClasses.html" />
     <Content Include="css\bootstrap-grid.css" />
     <Content Include="css\bootstrap-grid.min.css" />
     <Content Include="css\bootstrap-grid.rtl.css" />
@@ -85,13 +87,17 @@
     <Content Include="css\bootstrap.rtl.min.css" />
     <Content Include="css\style.css" />
     <Content Include="css\WebsiteCss.css" />
+    <Content Include="CustomClassesForm.html" />
     <Content Include="DisplayFlex.html" />
     <Content Include="DivOrdering.html" />
     <Content Include="First.html" />
     <Content Include="FormControl.html" />
     <Content Include="HorizontalAlignment.html" />
+    <Content Include="ImageClasses.html" />
+    <Content Include="Images\Amazing Pictures of Nature_5.jpg" />
     <Content Include="Images\banner.jpg" />
     <Content Include="InlineForm.html" />
+    <Content Include="InputGroup.html" />
     <Content Include="js\bootstrap.bundle.js" />
     <Content Include="js\bootstrap.bundle.min.js" />
     <Content Include="js\bootstrap.esm.js" />
@@ -99,6 +105,7 @@
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="ListGroup.html" />
+    <Content Include="NavClasses.html" />
     <Content Include="Note.txt" />
     <Content Include="Position.html" />
     <Content Include="Text-Formatting.html" />
